--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.3.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'com.crud'
@@ -21,6 +22,7 @@ dependencies {
     compile('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
+	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
 
 test {
