--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('mysql:mysql-connector-java')
-//    compile('org.postgresql:postgresql')
+//    compile('mysql:mysql-connector-java')
+    compile('org.postgresql:postgresql')
     compileOnly('org.projectlombok:lombok')
 	annotationProcessor('org.projectlombok:lombok')
 //	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
