--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 //    compile('mysql:mysql-connector-java')
     compile('org.postgresql:postgresql')
     compileOnly('org.projectlombok:lombok')
+    compile('io.springfox:springfox-swagger2:2.7.0')
+    compile('io.springfox:springfox-swagger-ui:2.7.0')
 	annotationProcessor('org.projectlombok:lombok')
 //	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 	testCompile ('junit:junit:4.12')
