--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.3.1.RELEASE'
+	id 'org.springframework.boot' version '2.2.7.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 //	id 'war'
@@ -14,20 +14,25 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-//    compile('mysql:mysql-connector-java')
-    compile('org.postgresql:postgresql')
-    compileOnly('org.projectlombok:lombok')
-    compile('io.springfox:springfox-swagger2:2.7.0')
-    compile('io.springfox:springfox-swagger-ui:2.7.0')
-	annotationProcessor('org.projectlombok:lombok')
-//	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
-	testCompile ('junit:junit:4.12')
-	testCompile ('org.mockito:mockito-all:1.10.19')
+	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.projectlombok:lombok')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('mysql:mysql-connector-java')
+	//compile('org.postgresql:postgresql')
+	annotationProcessor 'org.projectlombok:lombok'
+	//compile('io.springfox:springfox-swagger2:2.7.0')
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	//compile('io.springfox:springfox-swagger-ui:2.7.0')
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+
+	compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
+	compile('com.google.code.gson:gson:2.8.6')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
+
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 }
 
 test {
