--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('mysql:mysql-connector-java')
-	//compile('org.postgresql:postgresql')
+//	compile('mysql:mysql-connector-java')
+	compile('org.postgresql:postgresql')
 	annotationProcessor 'org.projectlombok:lombok'
 	//compile('io.springfox:springfox-swagger2:2.7.0')
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
@@ -26,7 +26,7 @@ dependencies {
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	//providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+//	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 
 	compile('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
 	compile('com.google.code.gson:gson:2.8.6')
