--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-//	compile('mysql:mysql-connector-java')
-	compile('org.postgresql:postgresql')
+	compile('mysql:mysql-connector-java')
+//	compile('org.postgresql:postgresql')
 	annotationProcessor 'org.projectlombok:lombok'
 	//compile('io.springfox:springfox-swagger2:2.7.0')
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
@@ -33,6 +33,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.springframework.boot:spring-boot-starter-mail:2.3.4.RELEASE')
 }
 
 test {
