--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europ
 spring.datasource.username=majafra
 spring.datasource.password=Franciszek03
 # EMAIL CONFIGURATION
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
