--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,9 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #ADMINISTRATION
-admin.mail = bartlomiej.wit@gmail.com
+admin.mail = bartlomiej.wit@gmail.
+management.endpoints.web.exposure.include=*
+#ACTUATOR INFO
+info.app.name=Task Application
+info.app.description=Application has been created by Kodilla course!
+info.app.version=1.0.0
