--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,11 @@ management.endpoints.web.exposure.include=*
 info.app.name=Task Application
 info.app.description=Application has been created by Kodilla course!
 info.app.version=1.0.0
+info.app.owner.name=John
+info.app.owner.administrator.email=john.doe@test.com
+info.app.owner.administrator.address.street=Super Cool Street
+info.app.owner.administrator.address.number=42
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to make the world a better place
+info.company.email=tasks@crud.com
+info.company.phone=744489230
